[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
author = "github@randomhacks.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_rapier2d = { version = "*", features = [ "simd-nightly", "debug-render" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
